<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_item_photo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/hafiyyan"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:padding="5dp"/>

        <TextView
                android:id="@+id/tv_data_name"
                android:text="@string/nama_creator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="12sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textAlignment="center"
                android:layout_marginBottom="16dp"/>

        <TextView
                android:id="@+id/tv_data_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_aplikasi"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:lineSpacingMultiplier="1"
                android:textAlignment="center"
                android:textColor="@android:color/black"/>

        <Button
                android:id="@+id/btn_instagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/instagram" />

        <Button
                android:id="@+id/btn_dicoding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/dicoding" />

        <Button
                android:id="@+id/btn_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/github" />

    </LinearLayout>
</ScrollView>